# dion

./: .gitignore  .gitmodules  pyproject.toml  requirements.txt
ada_dion/: __init__.py
ada_dion/benchmarks/: metrics_collector.py  plots.py  sweep.py  tier_a_correctness.py  tier_b_microbench.py  tier_c_scale.py
ada_dion/integration/: __init__.py  config_registry.py  hybrid_optimizer.py  param_grouper.py
ada_dion/integration/torchtitan_shim/: __init__.py  config_registry.py
ada_dion/optim/: __init__.py  adadion.py  adadion_v2.py  agdion.py  config_registry.py  dion.py  dion2.py  dtensor_utils.py  gsdion.py  lion.py  muon.py  ortho.py  qcdion.py  scalar_opts.py  sdion.py
ada_dion/scripts/: generate_paper_plots.py  generate_plots.py  part_a_collect.sh  part_a_replay.py  part_b_training.sh  patch_torchtitan.sh  run_320m_sweep.sh  run_adadion_sweep.sh  run_adadion_sweep_320m.sh  run_agdion_comparison.sh  run_all_experiments.sh  run_full_pipeline_local.py  run_gsdion_comparison.py  run_local.sh  run_multi_node.sh  run_runpod_all.sh  run_sdion_test.sh  run_seed_confirmation.py  run_single_node.sh  run_sweep.sh  runpod_setup.sh  test_qcdion.py
ada_dion/scripts/slurm/: discover_cluster.sh  env.sh  job_all_phases.sbatch  job_multi_node.sbatch  job_optimal_baselines.sbatch  job_optimal_multinode.sbatch  job_sweep.sbatch  (+3 more)
ada_dion/tests/: conftest.py  test_adadion.py  test_adadion_e2e.py  test_adadion_prepush.py  test_dion.py  test_dion2.py  test_hybrid_optimizer.py  test_muon.py  test_ortho.py  test_param_grouper.py
benchmarks/: cifar10_benchmark.py
paper/: main.tex
